<resources>
    <string name="app_name">Project1_Tic-Tac-Toe</string>
    <string name="tic_tac_toe">TIC - TAC - TOE</string>
    <string name="welcome_to">Welcome to</string>
    <string name="exit">EXIT</string>
    <string name="multiplayer">MULTIPLAYER</string>
    <string name="single_player">SINGLE PLAYER</string>
    <string name="the_result">THE RESULT</string>
    <string name="back_to_menu">BACK TO MENU</string>
    <string name="start_next_game">START NEXT GAME</string>
    <string name="enter_players_names">Enter players names</string>
    <string name="player_one">Player One</string>
    <string name="player_two">Player Two</string>
    <string name="ok">OK</string>
</resources>