<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartScreen"
    android:background="#D0C8DD">

    <TextView
        android:id="@+id/entername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/enter_players_names"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/playerOne"
        app:layout_constraintEnd_toStartOf="@+id/playerTwo"
        app:layout_constraintStart_toEndOf="@+id/playerOne"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/playerOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/player_one"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entername" />

    <TextView
        android:id="@+id/playerOneScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/playerOne"
        app:layout_constraintStart_toStartOf="@+id/playerOne"
        app:layout_constraintTop_toBottomOf="@+id/playerOne" />

    <EditText
        android:id="@+id/playerTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/player_two"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entername" />

    <TextView
        android:id="@+id/playerTwoScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/playerTwo"
        app:layout_constraintStart_toStartOf="@+id/playerTwo"
        app:layout_constraintTop_toBottomOf="@+id/playerTwo" />

    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/ok"
        app:layout_constraintEnd_toStartOf="@+id/playerTwoScore"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toEndOf="@+id/playerOneScore"
        app:layout_constraintTop_toBottomOf="@+id/playerOneScore"
        app:layout_constraintVertical_bias="0.0"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:backgroundTint="@color/white"/>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ok">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/playerOneScore">

            <Button
                android:id="@+id/button1"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="60sp"
                android:textStyle="bold"
                app:backgroundTint="@color/white" />

            <Button
                android:id="@+id/button2"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="10dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="60sp"
                android:textStyle="bold"
                app:backgroundTint="@color/white" />

            <Button
                android:id="@+id/button3"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="10dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="60sp"
                android:textStyle="bold"
                app:backgroundTint="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/button1">

            <Button
                android:id="@+id/button4"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="60sp"
                android:textStyle="bold"
                app:backgroundTint="@color/white" />

            <Button
                android:id="@+id/button5"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="10dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="60sp"
                android:textStyle="bold"
                app:backgroundTint="@color/white" />

            <Button
                android:id="@+id/button6"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="10dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="60sp"
                android:textStyle="bold"
                app:backgroundTint="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/button4">

            <Button
                android:id="@+id/button7"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="60sp"
                android:textStyle="bold"
                app:backgroundTint="@color/white" />

            <Button
                android:id="@+id/button8"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="10dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="60sp"
                android:textStyle="bold"
                app:backgroundTint="@color/white" />

            <Button
                android:id="@+id/button9"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="10dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="60sp"
                android:textStyle="bold"
                app:backgroundTint="@color/white" />
        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/start_next_game"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/result"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="@+id/result"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_menu"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/reset"
        app:layout_constraintStart_toStartOf="@+id/reset"
        app:layout_constraintTop_toBottomOf="@+id/reset" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/the_result"
        android:textColor="#00b386"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />


</androidx.constraintlayout.widget.ConstraintLayout>



